Update courses and certification

--- a/palminio_cv_en.tex
+++ b/palminio_cv_en.tex
@@ -232,7 +232,7 @@ Developer, Technical Leader}
 
 %%% Certifications
 %%% ------------------------------------------------------------
-\NewPart{Certificates}{}
+\NewPart{Certifications}{}
 
 \CertificatesEntry{\large{\textbf{ScrumMaster}}}{}
 \CertificatesEntry{}{
