--- a/palminio_cv_es.tex
+++ b/palminio_cv_es.tex
@@ -7,7 +7,7 @@
 % Source: http://www.howtotex.com/
 % Feel free to distribute this template, but please keep the
 % referal to HowToTeX.com.
-% Date: July 2011
+% Date: July 2011f
 % 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % How to use writeLaTeX: 
@@ -176,7 +176,7 @@
 \sepspace
 
 %2013-2014 Make IT Coop. As Associate, Secretary
-\EducationEntry{Make IT Coop.}{2013-2014}{Associate, Secretary}{
+\WorkEntry{Make IT Coop.}{2013-2014}{Associate, Secretary}{
 Socio fundador y Secretario en Cooperativa Make IT Coop. También desarrollo en diferentes tecnologías web.}
 
 \sepspace
