Add SMAC certification

--- a/palminio_cv_en.tex
+++ b/palminio_cv_en.tex
@@ -183,7 +183,7 @@ Software Engineer}
 \sepspace
 
 %2008-2010 Motorola Mobility as Software Engineer.
-\EducationEntry{Motorola Mobility}{2008-2010}{Software Engineer}
+\WorkEntry{Motorola Mobility}{2008-2010}{Software Engineer}
 {Software Engineering on Java Technologies (J2EE in a context of telecommunications mobile devices) at Motorola Mobility of Argentina S.A.}
 \sepspace
 
@@ -237,7 +237,16 @@ Developer, Technical Leader}
 \CertificatesEntry{\large{\textbf{ScrumMaster}}}{}
 \CertificatesEntry{}{
 Certified ScrumMaster by SCRUM ALLIANCE.\newline
-URL ScrumMaster profile: \url{https://www.scrumalliance.org/community/profile/dpalminio}
+License: 000428099\newline
+URL: \url{https://www.scrumalliance.org/community/profile/dpalminio}
+}
+\sepspace
+
+\CertificatesEntry{\large{\textbf{SMAC}}}{}
+\CertificatesEntry{}{
+Scrum Master Accredited Certification by International Scrum Institute.\newline
+License: 59173583922442\newline
+URL: \url{http://www.scrum-institute.org/International_Scrum_Institute_Certificate_Validation_Tool.php}
 }
 \sepspace
 
