--- a/palminio_cv_es.tex
+++ b/palminio_cv_es.tex
@@ -251,8 +251,17 @@ Desarrollador y Líder técnico en proyectos de desarrollo de software para empr
 
 \CertificatesEntry{\large{\textbf{ScrumMaster}}}{}
 \CertificatesEntry{}{
-Certified ScrumMaster by SCRUM ALLIANCE.\newline
-URL ScrumMaster profile: \url{https://www.scrumalliance.org/community/profile/dpalminio}
+Certified ScrumMaster por SCRUM ALLIANCE.\newline
+Licencia: 000428099\newline
+URL: \url{https://www.scrumalliance.org/community/profile/dpalminio}
+}
+\sepspace
+
+\CertificatesEntry{\large{\textbf{SMAC}}}{}
+\CertificatesEntry{}{
+Scrum Master Accredited Certification por International Scrum Institute.\newline
+Licencia: 59173583922442\newline
+URL: \url{http://www.scrum-institute.org/International_Scrum_Institute_Certificate_Validation_Tool.php}
 }
 \sepspace
 
