Add SPOAC certification

--- a/palminio_cv_en.tex
+++ b/palminio_cv_en.tex
@@ -36,6 +36,7 @@
 \usepackage{geometry}
 	\textheight=700px                    % Saving trees ;-)
 \usepackage{url}
+\usepackage{wrapfig}
 
 \frenchspacing              % Better looking spacings after periods
 \pagestyle{empty}           % No pagenumbers/headers/footers
@@ -238,7 +239,7 @@ Developer, Technical Leader}
 \CertificatesEntry{}{
 Certified ScrumMaster by SCRUM ALLIANCE.\newline
 License: 000428099\newline
-URL: \url{https://www.scrumalliance.org/community/profile/dpalminio}
+URL: \url{https://www.scrumalliance.org/community/profile/dpalminio}\sepspace
 }
 \sepspace
 
@@ -246,6 +247,14 @@ URL: \url{https://www.scrumalliance.org/community/profile/dpalminio}
 \CertificatesEntry{}{
 Scrum Master Accredited Certification by International Scrum Institute.\newline
 License: 59173583922442\newline
+URL: \url{http://www.scrum-institute.org/International_Scrum_Institute_Certificate_Validation_Tool.php}
+}
+\sepspace
+
+\CertificatesEntry{\large{\textbf{SPOAC}}}{}
+\CertificatesEntry{}{
+Scrum Product Owner Accredited Certification by International Scrum Institute.\newline
+License: 92432962027378\newline
 URL: \url{http://www.scrum-institute.org/International_Scrum_Institute_Certificate_Validation_Tool.php}
 }
 \sepspace
