--- a/palminio_cv_es.tex
+++ b/palminio_cv_es.tex
@@ -265,6 +265,14 @@ URL: \url{http://www.scrum-institute.org/International_Scrum_Institute_Certifica
 }
 \sepspace
 
+\CertificatesEntry{\large{\textbf{SPOAC}}}{}
+\CertificatesEntry{}{
+Scrum Product Owner Accredited Certification por International Scrum Institute.\newline
+Licencia: 92432962027378\newline
+URL: \url{http://www.scrum-institute.org/International_Scrum_Institute_Certificate_Validation_Tool.php}
+}
+\sepspace
+
 %%% Courses
 %%% ------------------------------------------------------------
 \NewPart{Cursos de Gestión y Organización}{}
