Add SC4JD certification

--- a/palminio_cv_en.tex
+++ b/palminio_cv_en.tex
@@ -259,6 +259,14 @@ URL: \url{http://www.scrum-institute.org/International_Scrum_Institute_Certifica
 }
 \sepspace
 
+\CertificatesEntry{\large{\textbf{SC4JD}}}{}
+\CertificatesEntry{}{
+Scrum Certification for Java Developer by International Scrum Institute.\newline
+License: 96122926946263\newline
+URL: \url{http://www.scrum-institute.org/International_Scrum_Institute_Certificate_Validation_Tool.php}
+}
+\sepspace
+
 %%% Courses
 %%% ------------------------------------------------------------
 \NewPart{Courses in management and organization}{}
