--- a/palminio_cv_es.tex
+++ b/palminio_cv_es.tex
@@ -273,6 +273,14 @@ URL: \url{http://www.scrum-institute.org/International_Scrum_Institute_Certifica
 }
 \sepspace
 
+\CertificatesEntry{\large{\textbf{SC4JD}}}{}
+\CertificatesEntry{}{
+Scrum Certification for Java Developer por International Scrum Institute.\newline
+Licencia: 96122926946263\newline
+URL: \url{http://www.scrum-institute.org/International_Scrum_Institute_Certificate_Validation_Tool.php}
+}
+\sepspace
+
 %%% Courses
 %%% ------------------------------------------------------------
 \NewPart{Cursos de Gestión y Organización}{}
