Add text new course

--- a/palminio_cv_es.tex
+++ b/palminio_cv_es.tex
@@ -286,6 +286,7 @@ URL: \url{http://www.scrum-institute.org/International_Scrum_Institute_Certifica
 \NewPart{Cursos de Gestión y Organización}{}
 
 \CoursesEntry{Curso de Certified Scrum Master}{2015}{Kleer, Cba.-Arg.}{}
+\CoursesEntry{Scrum Leader}{2015}{ValueInnova, Cba.-Arg.}{}
 \CoursesEntry{Especialización en Project Management}{2010}{UTNFRBA, Bs.As.-Arg.}{}
 \CoursesEntry{Carrera de Project Management}{2008}{IAAP, PMI, Bs.As.-Arg.}{}
 \CoursesEntry{Estructuración de Proyectos PM01.}{2007}{IAAP, Bs.As.-Arg.}{}
