--- a/palminio_cv_en.tex
+++ b/palminio_cv_en.tex
@@ -271,11 +271,12 @@ URL: \url{http://www.scrum-institute.org/International_Scrum_Institute_Certifica
 %%% ------------------------------------------------------------
 \NewPart{Courses in management and organization}{}
 
-\CoursesEntry{Curso de Certified Scrum Master}{2015}{Kleer, Cba.-Arg.}{}
-\CoursesEntry{Especialización en Project Management}{2010}{UTNFRBA, Bs.As.-Arg.}{}
-\CoursesEntry{Carrera de Project Management}{2008}{IAAP, PMI, Bs.As.-Arg.}{}
-\CoursesEntry{Estructuración de Proyectos PM01.}{2007}{IAAP, Bs.As.-Arg.}{}
-\CoursesEntry{Creación de Cooperativas.}{2012}{INAES, Cba.-Arg.}{}
+\CoursesEntry{Course of Certified Scrum Master}{2015}{Kleer, Cba.-Arg.}{}
+\CoursesEntry{Scrum Leader}{2015}{ValueInnova, Cba.-Arg.}{}
+\CoursesEntry{Specialization in Project Management}{2010}{UTNFRBA, Bs.As.-Arg.}{}
+\CoursesEntry{Project Management Career}{2008}{IAAP, PMI, Bs.As.-Arg.}{}
+\CoursesEntry{Structuring Projects PM01.}{2007}{IAAP, Bs.As.-Arg.}{}
+\CoursesEntry{Creation of Cooperatives.}{2012}{INAES, Cba.-Arg.}{}
 
 \sepspace
 
