Add last work experience

--- a/palminio_cv_es.tex
+++ b/palminio_cv_es.tex
@@ -163,7 +163,13 @@
 \NewPart{Experiencia laboral}{}
 
 %2014-2015 Globant (globant.com) Software Engineer.
-\WorkEntry{Globant}{2015-actual}{Technical Leader, Focal point y Java developer}
+\WorkEntry{Globant/Latam}{2015-actual}{ScrumMaster}
+{ScrumMaster en un proyecto para aerolínea Latam (LAN/Tam) contratado por Globant Company.}
+
+\sepspace
+
+%2014-2015 Globant (globant.com) Software Engineer.
+\WorkEntry{Globant}{2015}{Technical Leader, Focal point y Java developer}
 {1) Technical Lead en Perl/Java tecnologías para cuenta de LAN en empresa Globant. Las tecnologías usadas fueron: Perl (POO with Moose, cgi, Test::Moore, Template Toolkit), MySQL, Linux, SVN, Git-Svn, CSS3, HTML5, Eclipse (RSE, EPIC), Review Board, Jenkins, etc. The Java Technologies used was SOAP, RESTful/RESTEasy, Spring, Maven, Javascript with front-end using MVC (Backbone.js). Los proyectos fueron  relacionados a recolección de datos para envío a Google Analytic, gestión de promosiones y gestión de canje preferente de pasajes y usuarios Lanpass.
 2) Focal point y Desarrollador Java en proyectos de cambio de pasajes con arquitectura SOA.}
 
