--- a/palminio_cv_en.tex
+++ b/palminio_cv_en.tex
@@ -169,7 +169,12 @@ I'm a Systems Engineer graduated at the “National University of Southern Patag
 \NewPart{Work experience}{}
 
 %2014-2015 Globant (globant.com) Software Engineer.
-\WorkEntry{Globant}{2015-present}{Technical Leader, Focal point and Java developer}
+\WorkEntry{Globant/Latam}{2015-present}{ScrumMaster}
+{ScrumMaster in a context of Latam (LAN) airline at Globant Company.}
+\sepspace
+
+%2014-2015 Globant (globant.com) Software Engineer.
+\WorkEntry{Globant}{2015}{Technical Leader, Focal point and Java developer}
 {Technical Lead on Perl/Java Technologies in a context of LAN airline at Globant Company. The Perl Technologies used was Perl (POO with Moose, cgi, Test::Moore, Template Toolkit), MySQL, Linux, SVN, Git-Svn, CSS3, HTML5, Eclipse (RSE, EPIC), Review Board, Jenkins, etc. The Java Technologies used was SOAP, RESTful/RESTEasy, Spring, Maven, Javascript with front-end using MVC (Backbone.js). Project related to data collection from web site to send to Google Analytic.}
 \sepspace
 
