Add summary and update

--- a/palminio_cv_es.tex
+++ b/palminio_cv_es.tex
@@ -98,6 +98,7 @@
 		\noindent\hangindent=2em\hangafter=0 \small #4 % Description
 		\normalsize \par}
 
+		
 \newcommand{\CoursesEntry}[4]{				  % Same as \EducationEntry
 		\noindent \textbf{#1} \hfill      % Jobname
 		\colorbox{Black}{\color{White}#2} \par  % Duration
@@ -132,12 +133,21 @@
 \NewPart{Datos personales}{}
 
 \PersonalEntry{Nacimiento}{6 de Enero de 1977}
-\PersonalEntry{Localización}{5000 Cordoba, Argentina}
+\PersonalEntry{Localización}{Santiago de Chile}
 \PersonalEntry{Teléfono}{(000) 000-0000}
 \PersonalEntry{Mail}{\url{dario.palminio@gmail.com}}
 \PersonalEntry{Sitio web}{\url{https://www.palminio.com}}
 \PersonalEntry{linkedin}{\url{https://www.linkedin.com/in/palminio}}
 \PersonalEntry{CScrumMaster}{\url{https://www.scrumalliance.org/community/profile/dpalminio}}
+
+%%% Work experience
+%%% ------------------------------------------------------------
+\NewPart{Sumario}{}
+
+Soy un Ingeniero de Sistemas trabajando como Scrum Master. Las aptitudes con las que me desenvuelvo con dicho rol son: liderazgo servicial, resiliente y mejorador, facilitador, comunicativo y sociable, conciencia situacional, asertivo, transparente, mediador y resolutor de conflictos, entusiasta, proactivo y con actitud de empoderamiento. 
+Me gusta desarrollar equipos ágiles de excelencia que apliquen prácticas de ingeniería de software. También me llevo bien con la idea de ser un despertador servicial, que influencia en los cambios culturales, desarrollo personal y en hacer que las cosas pasen. Busco desarrollarme en la evangelización de las prácticas ágiles y en el entrenamiento o coaching ágil. En esta vía he escrito un libro ("Scrum en ingeniería de software"), mantengo blogs (http://agilismoeningenieriadesoftware.blogspot.cl), participo en comunidades e influencio en las organizaciones en las cuales estoy. Soy un apasionado de lo que hago y me gusta mejorar cada día.
+
+\sepspace
 
 %%% Education
 %%% ------------------------------------------------------------
@@ -163,15 +173,37 @@
 \NewPart{Experiencia laboral}{}
 
 %2014-2015 Globant (globant.com) Software Engineer.
-\WorkEntry{Globant/Latam}{2015-actual}{ScrumMaster}
-{ScrumMaster en un proyecto para aerolínea Latam (LAN/Tam) contratado por Globant Company.}
+\WorkEntry{LATAM/Globant}{2015-2016 (actual)}{ScrumMaster}
+{ScrumMaster en un proyecto para aerolínea Latam contratado por Globant Company, con las siguientes responsabilidades principales:
+\begin{itemize}
+\item Ayudar al equipo empleando las prácticas Agile para cumplir con los compromisos de los proyectos digitales.
+\item Construir un ambiente confiable y seguro para el equipo.
+\item Evaluar la madurez del equipo facilitando su mejora a un ritmo sostenible.
+\item Facilitar el debate, la toma de decisiones y la resolución de conflictos.
+\item Ayudar a la comunicación interna y externa, mejorar la transparencia e irradiar información.
+\item Ayudan a mejorar el trabajo del Product Owner, ayudando a encontrar maneras de mantener el Product Backlog y el Release Plan.
+\item Buscar lograr que el equipo trabaje eficiéntemente bajo los valores ágiles.
+\item Procurar que se desarrollen prácticas de ingeniería para lograr productos de calidad.
+\item Prestar atención a la organización colaborando en comunidades, buscando cohesión organizacional, influenciando para la adopción del agilismo y para que se mejore la eficiencia organizacional.
+\item Brindar capacitaciones y charlas, en diferentes eventos, relacionadas a la agilidad y a la Ingeniería de Software.
+\item Ayudar a brindar información y colaborar con otras áreas de la organización comunicándose con PMO, áreas de DevOps y de gestión.
+\item Colaborar con la gestión de riesgos, manejo de impedimentos y análisis de causa raíces.
+\item Ayudar en el camino de carrera y al crecimiento profesional y personal a los integrantes del equipo.
+\item Colaborar, reportar y ayudar a Agile Manegers a realizar actividades o desarrollos de soluciones transversales u organizacionales.
+\end{itemize}
+}
 
 \sepspace
 
 %2014-2015 Globant (globant.com) Software Engineer.
 \WorkEntry{Globant}{2015}{Technical Leader, Focal point y Java developer}
-{1) Technical Lead en Perl/Java tecnologías para cuenta de LAN en empresa Globant. Las tecnologías usadas fueron: Perl (POO with Moose, cgi, Test::Moore, Template Toolkit), MySQL, Linux, SVN, Git-Svn, CSS3, HTML5, Eclipse (RSE, EPIC), Review Board, Jenkins, etc. The Java Technologies used was SOAP, RESTful/RESTEasy, Spring, Maven, Javascript with front-end using MVC (Backbone.js). Los proyectos fueron  relacionados a recolección de datos para envío a Google Analytic, gestión de promosiones y gestión de canje preferente de pasajes y usuarios Lanpass.
-2) Focal point y Desarrollador Java en proyectos de cambio de pasajes con arquitectura SOA.}
+{
+\begin{itemize}
+\item Scrum Master de equipo tipo POD (con roles BA, QC y PM).
+\item Technical Lead en Perl/Java tecnologías para cuenta de LAN en empresa Globant. Las tecnologías usadas fueron: Perl (POO with Moose, cgi, Test::Moore, Template Toolkit), MySQL, Linux, SVN, Git-Svn, CSS3, HTML5, Eclipse (RSE, EPIC), Review Board, Jenkins, etc. The Java Technologies used was SOAP, RESTful/RESTEasy, Spring, Maven, Javascript with front-end using MVC (Backbone.js). Los proyectos fueron  relacionados a recolección de datos para envío a Google Analytic, gestión de promosiones y gestión de canje preferente de pasajes y usuarios Lanpass.
+\item Focal point y Desarrollador Java en proyectos de cambio de pasajes con arquitectura SOA.
+\end{itemize}
+}
 
 \sepspace
 
