--- a/palminio_cv_es.tex
+++ b/palminio_cv_es.tex
@@ -196,7 +196,7 @@ Me gusta desarrollar equipos ágiles de excelencia que apliquen prácticas de in
 \sepspace
 
 %2014-2015 Globant (globant.com) Software Engineer.
-\WorkEntry{Globant}{2015}{Technical Leader, Focal point y Java developer}
+\WorkEntry{Globant}{2015}{Technical Leader, Focal point y Scrum Master}
 {
 \begin{itemize}
 \item Scrum Master de equipo tipo POD (con roles BA, QC y PM).
@@ -323,6 +323,7 @@ URL: \url{http://www.scrum-institute.org/International_Scrum_Institute_Certifica
 %%% ------------------------------------------------------------
 \NewPart{Cursos de Gestión y Organización}{}
 
+\CoursesEntry{Gestión Ágil de Proyectos (PMI-ACP)}{2017}{Present License CER-R5LNG3F3-210777}{}
 \CoursesEntry{Curso de Certified Scrum Master}{2015}{Kleer, Cba.-Arg.}{}
 \CoursesEntry{Scrum Leader}{2015}{ValueInnova, Cba.-Arg.}{}
 \CoursesEntry{Especialización en Project Management}{2010}{UTNFRBA, Bs.As.-Arg.}{}
