Add SDC certification

--- a/palminio_cv_en.tex
+++ b/palminio_cv_en.tex
@@ -248,6 +248,14 @@ URL: \url{https://www.scrumalliance.org/community/profile/dpalminio}\sepspace
 }
 \sepspace
 
+
+\CertificatesEntry{\large{\textbf{SDC}}}{}
+\CertificatesEntry{}{
+SCRUMstudy - Accreditation Body for Scrum and Agile.\newline
+License: License 89793\newline
+}
+\sepspace
+
 \CertificatesEntry{\large{\textbf{SMAC}}}{}
 \CertificatesEntry{}{
 Scrum Master Accredited Certification by International Scrum Institute.\newline
