--- a/palminio_cv_es.tex
+++ b/palminio_cv_es.tex
@@ -295,6 +295,13 @@ URL: \url{https://www.scrumalliance.org/community/profile/dpalminio}
 }
 \sepspace
 
+\CertificatesEntry{\large{\textbf{SDC}}}{}
+\CertificatesEntry{}{
+SCRUMstudy - Accreditation Body for Scrum and Agile.\newline
+License: License 89793\newline
+}
+\sepspace
+
 \CertificatesEntry{\large{\textbf{SMAC}}}{}
 \CertificatesEntry{}{
 Scrum Master Accredited Certification por International Scrum Institute.\newline
