Update and Build pdf

--- a/palminio_cv_es.tex
+++ b/palminio_cv_es.tex
@@ -144,8 +144,8 @@
 %%% ------------------------------------------------------------
 \NewPart{Sumario}{}
 
-Soy un Ingeniero de Sistemas trabajando como Scrum Master. Las aptitudes con las que me desenvuelvo con dicho rol son: liderazgo servicial, resiliente y mejorador, facilitador, comunicativo y sociable, conciencia situacional, asertivo, transparente, mediador y resolutor de conflictos, entusiasta, proactivo y con actitud de empoderamiento. 
-Me gusta desarrollar equipos ágiles de excelencia que apliquen prácticas de ingeniería de software. También me llevo bien con la idea de ser un despertador servicial, que influencia en los cambios culturales, desarrollo personal y en hacer que las cosas pasen. Busco desarrollarme en la evangelización de las prácticas ágiles y en el entrenamiento o coaching ágil. En esta vía he escrito un libro ("Scrum en ingeniería de software"), mantengo blogs (http://agilismoeningenieriadesoftware.blogspot.cl), participo en comunidades e influencio en las organizaciones en las cuales estoy. Soy un apasionado de lo que hago y me gusta mejorar cada día.
+Soy un Ingeniero de Sistemas trabajando como Scrum Master Sr. y Team Facilitator. Las aptitudes con las que me desenvuelvo con dicho rol son: liderazgo servicial, resiliente y mejorador, facilitador, comunicativo y sociable, conciencia situacional, asertivo, transparente, mediador y resolutor de conflictos, entusiasta, proactivo y con actitud de empoderamiento. 
+Me gusta desarrollar equipos ágiles de excelencia que apliquen prácticas de ingeniería de software. También me llevo bien con la idea de ser un despertador servicial, que influencia en los cambios culturales, desarrollo personal y en hacer que las cosas pasen. Busco desarrollarme en la evangelización de las prácticas ágiles, en el entrenamiento o coaching ágil y en acompañamiento de transformaciones ágiles. En esta vía he escrito un libro ("Scrum en ingeniería de software"), mantengo blogs (http://agilismoeningenieriadesoftware.blogspot.cl), participo en comunidades, dicto capacitaciones e influencio, como agente de cambio, en las organizaciones en las cuales estoy. Soy un apasionado de lo que hago y me gusta mejorar cada día.
 
 \sepspace
 
@@ -173,7 +173,7 @@ Me gusta desarrollar equipos ágiles de excelencia que apliquen prácticas de in
 \NewPart{Experiencia laboral}{}
 
 %2014-2015 Globant (globant.com) Software Engineer.
-\WorkEntry{LATAM/Globant}{2015-2016 (actual)}{ScrumMaster}
+\WorkEntry{LATAM/Globant}{2015-2016 (actual)}{ScrumMaster Sr.}
 {ScrumMaster en un proyecto para aerolínea Latam contratado por Globant Company, con las siguientes responsabilidades principales:
 \begin{itemize}
 \item Ayudar al equipo empleando las prácticas Agile para cumplir con los compromisos de los proyectos digitales.
